Fixes in dockerFiles and docker-compose.yaml file and created nginx.config file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: "http://localhost:${BACKEND_PORT:-4000}/api/v1"
     restart: unless-stopped
     container_name: studynotion-frontend
     ports:
