--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongodb:
     image: "mongo"
@@ -34,6 +32,29 @@ services:
     container_name: studynotion-frontend
     ports:
       - "${FRONTEND_PORT:-5173}:80"
+    profiles:
+      - production
+
+  frontend-dev:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+      args:
+        VITE_API_URL: "http://localhost:${BACKEND_PORT:-4000}/api/v1"
+    restart: unless-stopped
+    container_name: studynotion-frontend-dev
+    ports:
+      - "${FRONTEND_PORT:-5173}:5173"
+    volumes:
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
+      - ./frontend/index.html:/app/index.html
+      - ./frontend/vite.config.js:/app/vite.config.js
+      - ./frontend/tailwind.config.js:/app/tailwind.config.js
+      - ./frontend/postcss.config.js:/app/postcss.config.js
+      - /app/node_modules
+    profiles:
+      - development
 
 volumes:
   mongodb_data:
@@ -41,3 +62,25 @@ volumes:
 
 
 # docker compose up -d --build
+
+# Development में switch करने के लिए
+# docker compose down
+# docker compose --profile development up -d
+
+# # Production में switch करने के लिए  
+# docker compose down
+# docker compose --profile production up -d
+
+# Development mode
+# docker compose --profile development down
+# docker compose --profile development up -d
+
+# # Production mode  
+# docker compose --profile production down
+# docker compose --profile production up -d
+
+# सभी containers stop करें (किसी भी profile के)
+# docker compose --profile development --profile production down
+
+# # फिर जो mode चाहिए वो start करें
+# docker compose --profile production up -d
